bdr.BDR.scala.error
Compilation error:
BDR:32: error: '(' expected but identifier found.
  else if readMessage()=="Y"){
          ^BDR:42: error: illegal start of simple expression
} 
^